// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`portfolioSlice reducers upsertPortfolio Bitcoin should update state 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "bip122:000000000019d6689c085ae165831e93/slip44:0": "100",
      },
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Array [
        "bip122:000000000019d6689c085ae165831e93:bc1qp45tn99yv90gnkqlx9q8uryr9ekxmrzm472kn7",
      ],
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "assetIds": Array [
          "bip122:000000000019d6689c085ae165831e93/slip44:0",
        ],
      },
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93/slip44:0": "100",
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93/slip44:0",
    ],
  },
}
`;

exports[`portfolioSlice reducers upsertPortfolio Bitcoin should update state with multiple bitcoin accounts 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "bip122:000000000019d6689c085ae165831e93/slip44:0": "100",
      },
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "bip122:000000000019d6689c085ae165831e93/slip44:0": "100",
      },
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Array [
        "bip122:000000000019d6689c085ae165831e93:bc1qr9y9lxpynxm8nkswez555xnv2plwwluxrpa55l",
      ],
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Array [
        "bip122:000000000019d6689c085ae165831e93:bc1qp45tn99yv90gnkqlx9q8uryr9ekxmrzm472kn7",
      ],
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "assetIds": Array [
          "bip122:000000000019d6689c085ae165831e93/slip44:0",
        ],
      },
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "assetIds": Array [
          "bip122:000000000019d6689c085ae165831e93/slip44:0",
        ],
      },
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
      "bip122:000000000019d6689c085ae165831e93:xpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93/slip44:0": "200",
    },
    "ids": Array [
      "bip122:000000000019d6689c085ae165831e93/slip44:0",
    ],
  },
}
`;

exports[`portfolioSlice reducers upsertPortfolio Ethereum and bitcoin should update state 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "bip122:000000000019d6689c085ae165831e93/slip44:0": "1010",
      },
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9": "8178352",
        "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "41208456",
        "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "42729243327349401946",
        "eip155:1/slip44:60": "27803816548287370",
      },
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Object {
        "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9": "8178352",
        "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "41208456",
        "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "40729243327349401946",
        "eip155:1/slip44:60": "23803816548287370",
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Array [
        "bip122:000000000019d6689c085ae165831e93:bc1qp45tn99yv90gnkqlx9q8uryr9ekxmrzm472kn7",
        "bip122:000000000019d6689c085ae165831e93:bc1qr9y9lxpynxm8nkswez555xnv2plwwluxrpa55l",
        "bip122:000000000019d6689c085ae165831e93:bc1q3fmp9tdacg5edlgmh8ttxz7cvj598dcn7w9xxd",
        "bip122:000000000019d6689c085ae165831e93:bc1qvzuvxskhr5eyaf65w37jxwwvskwyw3rlnqtyzc",
      ],
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Array [
        "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      ],
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Array [
        "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
      ],
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "assetIds": Array [
          "bip122:000000000019d6689c085ae165831e93/slip44:0",
        ],
      },
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
          "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9",
        ],
      },
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
          "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9",
        ],
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93/slip44:0": "1010",
      "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9": "16356704",
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "82416912",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "83458486654698803892",
      "eip155:1/slip44:60": "51607633096574740",
    },
    "ids": Array [
      "eip155:1/slip44:60",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9",
      "bip122:000000000019d6689c085ae165831e93/slip44:0",
    ],
  },
}
`;

exports[`portfolioSlice reducers upsertPortfolio Ethereum and bitcoin should update state and exclude unknown asset ids 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "bip122:000000000019d6689c085ae165831e93/slip44:0": "1010",
      },
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9": Object {
        "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9": "8178312",
        "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "41208442",
        "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "40729243327349401958",
        "eip155:1/erc20:0xf0939011a9bb95c3b791f0cb546377ed2693a574": "4516126",
        "eip155:1/slip44:60": "23803816548287371",
      },
    },
    "ids": Array [
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Array [
        "bip122:000000000019d6689c085ae165831e93:bc1qp45tn99yv90gnkqlx9q8uryr9ekxmrzm472kn7",
        "bip122:000000000019d6689c085ae165831e93:bc1qr9y9lxpynxm8nkswez555xnv2plwwluxrpa55l",
        "bip122:000000000019d6689c085ae165831e93:bc1q3fmp9tdacg5edlgmh8ttxz7cvj598dcn7w9xxd",
        "bip122:000000000019d6689c085ae165831e93:bc1qvzuvxskhr5eyaf65w37jxwwvskwyw3rlnqtyzc",
      ],
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9": Array [
        "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9",
      ],
    },
    "ids": Array [
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w": Object {
        "assetIds": Array [
          "bip122:000000000019d6689c085ae165831e93/slip44:0",
        ],
      },
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9",
          "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
          "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
          "eip155:1/erc20:0xf0939011a9bb95c3b791f0cb546377ed2693a574",
        ],
      },
    },
    "ids": Array [
      "eip155:1:0x6c8a778ef52e121b7dff1154c553662306a970e9",
      "bip122:000000000019d6689c085ae165831e93:zpub6qk8s2NQsYG6X2Mm6iU2ii3yTAqDb2XqnMu9vo2WjvqwjSvjjiYQQveYXbPxrnRT5Yb5p0x934be745172066EDF795ffc5EA9F28f19b440c637BaBw1wowPwbS8fj7uCfj3UhqhD2LLbvY6Ni1w",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "bip122:000000000019d6689c085ae165831e93/slip44:0": "1010",
      "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9": "8178312",
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "41208442",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "40729243327349401958",
      "eip155:1/erc20:0xf0939011a9bb95c3b791f0cb546377ed2693a574": "4516126",
      "eip155:1/slip44:60": "23803816548287371",
    },
    "ids": Array [
      "eip155:1/slip44:60",
      "eip155:1/erc20:0x5f18c75abdae578b483e5f43f12a39cf75b973a9",
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
      "eip155:1/erc20:0xf0939011a9bb95c3b791f0cb546377ed2693a574",
      "bip122:000000000019d6689c085ae165831e93/slip44:0",
    ],
  },
}
`;

exports[`portfolioSlice reducers upsertPortfolio ethereum should update state 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "1",
        "eip155:1/slip44:60": "1000",
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Array [
        "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      ],
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
        ],
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "1",
      "eip155:1/slip44:60": "1000",
    },
    "ids": Array [
      "eip155:1/slip44:60",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
    ],
  },
}
`;

exports[`portfolioSlice reducers upsertPortfolio ethereum should update state with multiple accounts 1`] = `
Object {
  "accountBalances": Object {
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "1",
        "eip155:1/slip44:60": "1000",
      },
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Object {
        "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "2",
        "eip155:1/slip44:60": "10",
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
    ],
  },
  "accountSpecifiers": Object {
    "accountMetadataById": Object {},
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Array [
        "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      ],
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Array [
        "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
      ],
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
    ],
  },
  "accounts": Object {
    "byId": Object {
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
        ],
      },
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8": Object {
        "assetIds": Array [
          "eip155:1/slip44:60",
          "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
        ],
      },
    },
    "ids": Array [
      "eip155:1:0x9a2d593725045d1727d525dd07a396f9ff079bb1",
      "eip155:1:0xea674fdde714fd979de3edf0f56aa9716b898ec8",
    ],
  },
  "assetBalances": Object {
    "byId": Object {
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48": "2",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d": "1",
      "eip155:1/slip44:60": "1010",
    },
    "ids": Array [
      "eip155:1/slip44:60",
      "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
      "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    ],
  },
}
`;

exports[`portfolioSlice selectors selectPortfolioAccountRows should return correct portfolio rows in case of 100% allocation on one asset 1`] = `
Array [
  Object {
    "allocation": 0,
    "assetId": "eip155:1/slip44:60",
    "cryptoAmount": "0",
    "fiatAmount": "0.00",
    "icon": "https://assets.coincap.io/assets/icons/eth@2x.png",
    "name": "Ethereum",
    "price": "1000",
    "priceChange": 2,
    "symbol": "ETH",
  },
  Object {
    "allocation": 100,
    "assetId": "eip155:1/erc20:0xc770eefad204b5180df6a14ee197d99d808ee52d",
    "cryptoAmount": "0.123456",
    "fiatAmount": "3.88",
    "icon": "https://assets.coincap.io/assets/icons/fox@2x.png",
    "name": "Fox",
    "price": "31.39",
    "priceChange": 2,
    "symbol": "FOX",
  },
  Object {
    "allocation": 0,
    "assetId": "eip155:1/erc20:0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48",
    "cryptoAmount": "0",
    "fiatAmount": "0.00",
    "icon": "https://assets.coingecko.com/coins/images/12367/thumb/oF1_9R1K_400x400.jpg?1599345463",
    "name": "USD Coin",
    "price": "1",
    "priceChange": 2,
    "symbol": "ETH",
  },
]
`;
